# jackdaw-balatro

./: .gitignore  README.md  pyproject.toml  tests_baseline.txt
.github/workflows/: ci.yml
docs/: _config.yml  action-coverage.md  balatrobot-action-mapping.md  baselines.md  engine.md  env-architecture.md  environment.md  getting-started.md  index.md  observation-audit.md  profiling-results.md  rl-guide.md  task-gamespec-generalization.md  test-triage.md  validation.md
docs/balatro-internals/: consumables.md  decks-and-stakes.md  engine-plan.md  file-inventory.md  g-table.md  joker-system.md  rng-init-trace.md  rng-system.md  scoring-pipeline.md  shop-system.md  state-machine.md
docs/milestones/: m10-feedback.md  m11-feedback.md  m12-feedback.md  m12-validation-results.md  m12_5-feedback.md  m13-feedback.md  m2-feedback.md  m3-feedback.md  m4-feedback.md  m5-feedback.md  m6-feedback.md  m7-feedback.md  m9-feedback.md
docs/source-map/: consumables.md  decks-and-stakes.md  engine-plan.md  file-inventory.md  g-table.md  joker-system.md  rng-init-trace.md  rng-system.md  scoring-pipeline.md  shop-system.md  state-machine.md
jackdaw/: __init__.py
jackdaw/agents/: __init__.py
jackdaw/bridge/: __init__.py  backend.py  balatrobot_adapter.py  deserializer.py  serializer.py
jackdaw/cli/: __init__.py  main.py  play.py  serve.py  smart_agent.py  validate.py
jackdaw/engine/: __init__.py  actions.py  back.py  blind.py  card.py  card_area.py  card_factory.py  card_utils.py  challenges.py  consumables.py  deck_builder.py  economy.py  game.py  hand_eval.py  hand_levels.py  jokers.py  packs.py  pools.py  profile.py  rng.py  round_lifecycle.py  run_init.py  runner.py  scoring.py  shop.py  stakes.py  state.py  tags.py  validator.py  vouchers.py
jackdaw/env/: __init__.py  action_space.py  agents.py  balatro_env.py  balatro_spec.py  consumable_targets.py  game_interface.py  game_spec.py  gymnasium_wrapper.py  live_env.py  observation.py  profiling.py  rewards.py
jackdaw/rl/: __init__.py  env_wrapper.py  network.py  rollout.py  trainer.py  vec_env.py
scripts/: baselines.py  evaluate.py  extract_prototypes.lua  extract_prototypes.py  find_seeds.py  lua_hand_eval_oracle.lua  lua_rng_oracle.lua  lua_scoring_oracle.lua  play.py  profile_training.py  run_shop_oracle.py  train.py  train_factored.py  train_ppo.py  validate.py  validate_full_run.py  validate_live_run.py  validate_run.py  validate_seed_accuracy.py
scripts/generate_fixtures/: README.md  run_shop_oracle.py
tests/benchmarks/: bench_hand_eval.py  bench_runner.py  test_env_bench.py
tests/bridge/: test_add_set.py  test_backend.py  test_deserializer.py  test_roundtrip.py  test_serializer.py
tests/cli/: test_serve.py  test_validate.py
tests/engine/: test_actions.py  test_back.py  test_balatrobot_adapter.py  test_blind.py  test_blind_scaling.py  test_card.py  (+61 more)
(+58 files in other folders)
