[project]
name = "jackdaw"
version = "0.1.0"
description = "Headless Balatro simulator for reinforcement learning research"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Tyler Flar"}]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Repository = "https://github.com/TylerFlar/jackdaw-balatro"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "lupa>=2.6",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "-m", "not benchmark"]
markers = ["benchmark: performance benchmarks (deselect with -m 'not benchmark')"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
